--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,6 +11,7 @@ body {
   font-family: 'Montserrat', sans-serif;
   width: 100%;
   height: 100vh;
+  overflow-x: hidden;
 }
 
 @layer utilities {
@@ -30,9 +31,3 @@ body {
     animation: ripple 0.6s ease-out forwards;
   }
 }
-
-/* .hero-banner {
-  background-image: url("/banner.png");
-  background-repeat: no-repeat;
-  background-size: cover;
-} */
