--- a/src/app/flavors/HomeFlavors/ext.css
+++ b/src/app/flavors/HomeFlavors/ext.css
@@ -22,3 +22,28 @@
         right: -220px;
     }
 }
+
+.studies-shape-left::before {
+    content: "";
+    background-image: url('/shapes/strength-shape-right.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    position: absolute;
+    top: -300px;
+    left: -140px;
+    width: 662px;
+    height: 662px;
+    z-index: -1;
+}
+
+@media (max-width:768px) {
+    .studies-shape-left::before {
+        left: -380px;
+    }
+}
+
+@media (max-width:510px) {
+    .studies-shape-left::before {
+        left: -460px;
+    }
+}
